--- a/app/composer.json
+++ b/app/composer.json
@@ -19,6 +19,7 @@
         "symfony/maker-bundle": "^1.47",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "config": {
