endpoint /planets/{id}/

--- a/app/.env
+++ b/app/.env
@@ -22,3 +22,5 @@ APP_SECRET=90f1c2c2ee603b2781e33f92238d715c
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL="mysql://planets_user:kx2MYf*VRhg3aTHE@mysql_db:3306/planets?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+API_BASE_URL="https://swapi.dev/api/"
