--- a/app/config/packages/fos_rest.yaml
+++ b/app/config/packages/fos_rest.yaml
@@ -13,3 +13,8 @@
 #    format_listener:
 #        rules:
 #            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
+
+fos_rest:
+    format_listener:
+        rules:
+            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
